--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
       <div class="gif" id="g3">
         <h2 class="text-center"><em> WHERE ROYALTY MEETS HAIR.</em></h2>
       </div>
-
+<p class="hours">
+ Opening Hours: Monday - Friday 9am - 5pm
+      </p>
+     
       <!-- First Coupon -->
       <div class="coupon1 clearfix">
         <strong>YOUR FIRST VISIT?</strong>
