--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2 class="text-center"><em> WHERE ROYALTY MEETS HAIR.</em></h2>
       </div>
 <p class="hours">
- Opening Hours: Monday - Friday 9am - 5pm
+ Hours of Operation: Monday - Friday 10am - 9pm
       </p>
      
       <!-- First Coupon -->
