--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <h2 class="text-center"><em> WHERE ROYALTY MEETS HAIR.</em></h2>
       </div>
 <p class="hours">
- Hours of Operation: Monday - Friday 10am - 9pm
+  MON - SUN 7:00AM - 8:00PM
       </p>
      
       <!-- First Coupon -->
@@ -128,7 +128,7 @@
         src="https://www.shareicon.net/data/2016/02/09/716186_relax_512x512.png"
       />
       <h3>LICENSED</h3>
-      <p class="product_list">
+      <p> class="product_list">
         Our stylists are highly skilled in all hair types. We are here for you!
       </p>
     </div>
