--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <p>
         © All Rights Reserved. Goddess Hair Salon LLC 2022.
         <i class="fa-solid fa-crown"></i>| Design by
-        <a href="toniwilliams.netlify.app">Toni Williams</a>
+        <a href="https://toniwilliams.netlify.app/">Toni Williams</a>
       </p>
     </footer>
   </body>
