--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         src="https://www.shareicon.net/data/2016/02/09/716186_relax_512x512.png"
       />
       <h3>LICENSED</h3>
-      <p> class="product_list">
+      <p class="product_list">
         Our stylists are highly skilled in all hair types. We are here for you!
       </p>
     </div>
