--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <li class="hide">HOME</li>
 
-        <li class="hide">ABOUT</li>
+        <li class="hide"><a href="#about">ABOUT</a></li>
 
         <li class="hide">SERVICES</li>
 
@@ -110,7 +110,7 @@
     </main>
 
     <!--  Products-->
-
+<section id="about">
     <div class="product">
       <img
         class="image"
@@ -142,6 +142,7 @@
         From the Earth, to your crown. No parabens, sulfates, or alcohol.
       </p>
     </div>
+    </section>
     <!-- Goddess Experience -->
     <section class="experience">
       <h4>
