--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
         <li class="hide"><a href="#about">ABOUT</a></li>
 
-        <li class="hide">SERVICES</li>
+        <li class="hide"><a href="#services">SERVICES</li>
 
-        <li class="hide">LOOKBOOK</li>
+        <li class="hide"><a href="#lookbook">LOOKBOOK</li>
 
-        <li class="hide">CONTACT</li>
+        <li class="hide"><a href="contact">CONTACT</li>
         <li class="showHome">
           <i class="fa-solid fa-house"> </i>
         </li>
@@ -171,7 +171,7 @@
     </section>
 
     <!-- Hairstylists -->
-    <section class="stylists clearfix">
+    <section class="stylists clearfix" id="services">
       <div class="zero clearfix">
         <button class="btn1">
           Book Ayesha Lake <br />
@@ -212,7 +212,7 @@
 
     <!--Lookbook-->
 
-    <section class="lookbook">
+    <section class="lookbook" id="lookbook">
       <h6><strong> Our Lookbook </strong></h6>
  <img class="mySlides" src="https://i.pinimg.com/736x/61/a7/60/61a7607007710075fc0701be44b36655.jpg">
 <img class="mySlides" src="https://i.pinimg.com/originals/0e/bb/59/0ebb594583a1557c28d414430c29b730.jpg">
