--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 
         <li class="hide"><a href="#about">ABOUT</a></li>
 
-        <li class="hide"><a href="#services">SERVICES</li>
+        <li class="hide"><a href="#services">SERVICES</a></li>
 
-        <li class="hide"><a href="#lookbook">LOOKBOOK</li>
+        <li class="hide"><a href="#lookbook">LOOKBOOK</a></li>
 
-        <li class="hide"><a href="contact">CONTACT</li>
+        <li class="hide"><a href="contact">CONTACT</a></li>
         <li class="showHome">
           <i class="fa-solid fa-house"> </i>
         </li>
