--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
     </section>
 
     <!-- Hairstylists -->
-    <section class="stylists clearfix" id="services">
+    <section class="stylists clearfix">
+      <section id="services">
       <div class="zero clearfix">
         <button class="btn1">
           Book Ayesha Lake <br />
@@ -225,7 +226,7 @@
       
     </section>
 
-    <section class="newsletter">
+    <section class="newsletter" id="contact">
       <p class="question"><strong>Be The First to Access Goddess Exclusives! </strong></p>
       <form method="post" action="#">
         <div class="fields">
