--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <li class="hide"><a href="#lookbook">LOOKBOOK</a></li>
 
-        <li class="hide"><a href="contact">CONTACT</a></li>
+        <li class="hide"><a href="#contact">CONTACT</a></li>
         <li class="showHome">
           <i class="fa-solid fa-house"> </i>
         </li>
@@ -170,9 +170,10 @@
         ></iframe>
       </div> -->
     </section>
+    </section>
 
     <!-- Hairstylists -->
-          <section id="services">
+        <section id="services">
 
     <section class="stylists clearfix">
       <div class="zero clearfix">
